--- a/index.html
+++ b/index.html
@@ -178,86 +178,86 @@
                     <div class="banner">
                         <div class="banner__slider">
                             <div class="row no-gutters no-wrap">
-                                <!-- <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner1">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/1.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner2">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/2.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner3">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/3.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner4">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/4.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner5">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/5.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner6">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/6.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <!-- <div class="col l-4 c-12 banner__item" id="banner7">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/7.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner8">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/8.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner9">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/9.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner10">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/10.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner11">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/11.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner12">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/12.jpg">
                                     </div>
-                                </div> -->
-                                <div class="col l-4 c-12 banner__item">
+                                </div>
+                                <div class="col l-4 c-12 banner__item" id="banner13">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/13.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner14">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/14.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner15">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/15.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item">
+                                <div class="col l-4 c-12 banner__item" id="banner16">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/16.jpg">
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <span class="banner__prev--btn control__btn--icon"><i class="bi bi-chevron-left"></i></span>
@@ -310,7 +310,7 @@
                         </div>
                     </div>
                     <!-- Album Detail Container -->
-                    <div class="album__container">
+                    <div class="album__container" id="albumScroll">
                         <h1 class="album__detail--heading text__heading">Album Hot</h1>
                         <!-- Album Detail -->
                         <div class="row album__detail">
