--- a/index.html
+++ b/index.html
@@ -178,42 +178,42 @@
                     <div class="banner">
                         <div class="banner__slider">
                             <div class="row no-gutters no-wrap">
-                                <div class="col l-4 c-12 banner__item" id="banner1">
+                                <div class="col l-4 m-6 c-12 banner__item" id="banner1">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/1.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item" id="banner2">
+                                <div class="col l-4 m-6 c-12 banner__item" id="banner2">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/2.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item" id="banner3">
+                                <div class="col l-4 m-6 c-12 banner__item" id="banner3">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/3.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item" id="banner4">
+                                <div class="col l-4 m-6 c-12 banner__item" id="banner4">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/4.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item" id="banner5">
+                                <div class="col l-4 m-6 c-12 banner__item" id="banner5">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/5.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item" id="banner6">
+                                <div class="col l-4 m-6 c-12 banner__item" id="banner6">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/6.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item" id="banner7">
+                                <div class="col l-4 m-6 c-12 banner__item" id="banner7">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/7.jpg">
                                     </div>
                                 </div>
-                                <div class="col l-4 c-12 banner__item" id="banner8">
+                                <div class="col l-4 m-6 c-12 banner__item" id="banner8">
                                     <div class="banner__item--wrap">
                                         <img class="banner__item--img" src="assets/images/banner/8.jpg">
                                     </div>
@@ -276,11 +276,11 @@
                         <!-- Album Detail -->
                         <div class="row album__detail">
                             <!-- Album Wrap Details -->
-                            <div class="album__wrap album__detail--wrap col l-3 c-12">
+                            <div class="album__wrap album__detail--wrap col l-3 m-4 c-12">
 
                             </div>
                             <!-- Songs Wrap Details -->
-                            <div class="album__detail--list col l-9 c-12">
+                            <div class="album__detail--list col l-9 m-8 c-12">
 
                             </div>
                         </div>
