--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <!-- Album Detail -->
                         <div class="row album__detail">
                             <!-- Album Wrap Details -->
-                            <div class="album__wrap album__detail--wrap col l-3 m-4 c-12">
+                            <div class="album__detail--wrap col l-3 m-4 c-12">
 
                             </div>
                             <!-- Songs Wrap Details -->
