--- a/index.html
+++ b/index.html
@@ -264,6 +264,11 @@
 
                         </div>
                     </div>
+                    <div class="songs__played">
+                        <h1 class="songs__played--heading text__heading">Recently Played</h1>
+                        <div class="row song__played--list">
+                        </div>
+                    </div>
                     <!-- Songs -->
                     <div class="songs">
                         <h1 class="song__heading text__heading">Trendy Song</h1>
