--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@
                 <div class="mobile__control--btn">
                     <i class="bi bi-volume-up"></i>
                 </div>
-                <input type="range" class="mobile__volume--progress" min="0" max="100" value="0">
-                <span>50%</span>
+                <input type="range" class="mobile__volume--progress" min="0" max="100" value="50">
+                <span class="mobile__volume--value">50%</span>
             </div>
         </div>
 
